--- a/ticketchain/src/app/globals.css
+++ b/ticketchain/src/app/globals.css
@@ -3,31 +3,27 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+ background-color: white;
+ color: #0C8596; 
+ font-family: Montserrat;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: white;
+  color: #0C8596; 
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+.btn {
+ background-color: #0C8596;
+}
+.primary-text{
+  color: #0C8596; 
+
 }
