Your commit message

--- a/ticketchain/src/app/dashboard/sidebar.css
+++ b/ticketchain/src/app/dashboard/sidebar.css
@@ -1,11 +1,11 @@
 /* Sidebar.css */
 .sidebar {
-  width: 250px;
+  width: 500px;
   height: 100%;
   position: fixed;
   top: 0;
-  left: 0;
-  background-color: #f4f4f4;
+  right: 0;
+  background-color: #ffffff;
   transition: transform 0.3s ease-in-out;
   transform: translateX(-100%);
 }
